# scalir

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.landing  LICENSE  Launch Optimiser (WSL).cmd  README.md  ROADMAP.md  SECURITY.md  app.html  claude-code-handoff.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  run-wsl.sh  tsconfig.json  vite.config.app.ts  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  linux-build.yml  release.yml  windows-build.yml
public/: llms.txt  robots.txt  sitemap.xml
scripts/: og-image.mjs  prerender.mjs  seo-images.mjs  sync-version.mjs
src/: App.svelte  AppStandalone.svelte  app.css  libheif.d.ts  main-app.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/core/: codecs.ts  exif.ts  index.ts  naming.ts  optimise.ts  presets.ts  rules.ts  types.ts
src/lib/: About.svelte  Compare.svelte  Download.svelte  Faq.svelte  Features.svelte  Footer.svelte  Home.svelte  PrivacyPolicy.svelte  Roadmap.svelte  SelfHosting.svelte  Tool.svelte  ToolLanding.svelte  analytics.ts  optimise.worker.ts  pages.ts  persist.ts  routes.data.d.ts  routes.data.js  seo.ts  workerPool.ts
src/lib/landing/: content.ts
test/: core.test.ts  persist.test.ts  routes.test.ts  workerPool.test.ts
